Contact us Frontend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,4 +26,21 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.flex-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.name{
+  flex: 1 0 140px;
+}
+
+.email{
+  flex: 1 0 120px;
+}
+
+.ph{
+  flex: 1 0 60px;
+}
 
