--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,7 +14,7 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -26,13 +26,15 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
+
 .flex-container{
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
 }
 
-.name{
+/* .name{
   flex: 1 0 140px;
 }
 
@@ -42,5 +44,5 @@ body {
 
 .ph{
   flex: 1 0 60px;
-}
+} */
 
